# desafio-spark

./: README.md  pyproject.toml
src/: data_processing.py  queries.py  spark_setup.py
tests/: test_data_processing.py
